# weather

./: LICENSE  README.md  plan.txt  weather.cabal
app/: Main.hs
src/: FlightData.hs  FlightStats.hs  Generator.hs  ObservationConversions.hs  ObservationParser.hs  ObservationSerializer.hs
test/: Spec.hs
