name:                weather
version:             0.1.0.0
synopsis:            Parses and generates weather data
description:         Parses and generates weather data
homepage:            https://github.com/githubuser/weather#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Generator
                     , FlightData
                     , FlightStats
                     , ObservationParser
                     , ObservationSerializer
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
                     , text
                     , time
  default-language:    Haskell2010

executable weather-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , weather
  default-language:    Haskell2010

test-suite weather-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , weather
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/weather
